--- a/Data Scraping and Cleaning.ipynb
+++ b/Data Scraping and Cleaning.ipynb
@@ -24,9 +24,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/jerrysun/anaconda/lib/python3.6/site-packages/h5py/__init__.py:34: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "//anaconda/lib/python3.5/site-packages/h5py/__init__.py:34: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
       "  from ._conv import register_converters as _register_converters\n",
-      "Using TensorFlow backend.\n"
+      "Using TensorFlow backend.\n",
+      "//anaconda/lib/python3.5/importlib/_bootstrap.py:222: RuntimeWarning: compiletime version 3.6 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.5\n",
+      "  return f(*args, **kwds)\n"
      ]
     }
    ],
@@ -117,10 +119,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from imdbpie import Imdb\n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -140,7 +140,7 @@
        "100"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26438,12 +26438,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import tmdbsimple as tmdb\n",
+    "tmdb.API_KEY = '1a513662563990255f5ebe7410946765' # v3\n",
+    "# API key v4: eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJhdWQiOiIxYTUxMzY2MjU2Mzk5MDI1NWY1ZWJlNzQxMDk0Njc2NSIsInN1YiI6IjVhYmU4ZDIyYzNhMzY4NDQ1NTAxNzFhYyIsInNjb3BlcyI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.gajzUzreDkrhD6Rj4eiSh-wWj-J3Y-1bwU9C3eXd82A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('The Matrix', 63000000)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie = tmdb.Movies(603)\n",
+    "response = movie.info()\n",
+    "movie.title, movie.budget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'iso_3166_1': 'US', 'primary': False, 'certification': 'R', 'release_date': '1999-03-30'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for c in movie.countries:\n",
+    "    if c['iso_3166_1'] == 'US':\n",
+    "        print(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def search_by_title(title):\n",
+    "    search = tmdb.Search()\n",
+    "    response = search.movie(query=title)\n",
+    "    for s in search.results:\n",
+    "        if s['title'] == title:\n",
+    "            return s\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'adult': False,\n",
+       " 'backdrop_path': '/jDai0rdlBHhcY8vpJ4XmTIDQU5i.jpg',\n",
+       " 'genre_ids': [18],\n",
+       " 'id': 389015,\n",
+       " 'original_language': 'en',\n",
+       " 'original_title': 'I, Tonya',\n",
+       " 'overview': 'Competitive ice skater Tonya Harding rises amongst the ranks at the U.S. Figure Skating Championships, but her future in the sport is thrown into doubt when her ex-husband intervenes.',\n",
+       " 'popularity': 28.395614,\n",
+       " 'poster_path': '/6gNXwSHxaksR1PjVZRqNapmkgj3.jpg',\n",
+       " 'release_date': '2017-12-08',\n",
+       " 'title': 'I, Tonya',\n",
+       " 'video': False,\n",
+       " 'vote_average': 7.5,\n",
+       " 'vote_count': 930}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "search_by_title('I, Tonya')"
+   ]
   },
   {
    "cell_type": "code",
@@ -26457,7 +26557,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -26471,7 +26571,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
