--- a/Modelling.ipynb
+++ b/Modelling.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,6 +19,7 @@
     "from sklearn.multiclass import OneVsRestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn import metrics\n",
     "from sklearn.multiclass import OneVsRestClassifier\n",
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +252,7 @@
        "4  [1. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. ...  "
       ]
      },
-     "execution_count": 252,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +498,7 @@
        "4  [1. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. ...  "
       ]
      },
-     "execution_count": 254,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -560,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +589,7 @@
        " 1.0]"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1166,7 @@
        " 'history.']"
       ]
      },
-     "execution_count": 260,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1176,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1197,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1222,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1242,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1253,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1263,7 @@
        "(5124, 20)"
       ]
      },
-     "execution_count": 266,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1273,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -1290,7 +1291,7 @@
        "       [ 0.,  0.,  0., ...,  0.,  0.,  0.]])"
       ]
      },
-     "execution_count": 267,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1301,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 21,
    "metadata": {
     "scrolled": false
    },
@@ -1313,7 +1314,7 @@
        "          n_jobs=1)"
       ]
      },
-     "execution_count": 268,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1325,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1346,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1361,7 +1362,7 @@
        "         9.93130417e-01,   8.06854819e-08])"
       ]
      },
-     "execution_count": 270,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1372,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1403,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1412,15 +1413,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest Accuracy on Train : 0.7818110850897736\n",
-      "Random Forest Accuracy on Test : 0.05070202808112324\n"
+      "Random Forest Accuracy on Train : 0.7767369242779079\n",
+      "Random Forest Accuracy on Test : 0.0483619344773791\n"
      ]
     }
    ],
@@ -1435,17 +1436,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest Avg Accuracy on test : 0.8686427457098284\n",
-      "Random Forest Exact Accuracy on test : 0.05070202808112324\n",
-      "Random Forest Precision on test : 0.6718245038324125\n",
-      "Random Forest Recall on test : 0.1733676939914673\n"
+      "Random Forest Avg Accuracy on test : 0.8673556942277689\n",
+      "Random Forest Exact Accuracy on test : 0.0483619344773791\n",
+      "Random Forest Precision on test : 0.6802939829569972\n",
+      "Random Forest Recall on test : 0.16846224552879877\n"
      ]
     }
    ],
@@ -1466,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1477,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1499,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1509,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1532,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1541,7 +1542,7 @@
        "(5124, 300)"
       ]
      },
-     "execution_count": 281,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1559,15 +1560,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest Accuracy on Train : 0.705503512880562\n",
-      "Random Forest Accuracy on Test : 0.01794071762870515\n"
+      "Random Forest Accuracy on Train : 0.703551912568306\n",
+      "Random Forest Accuracy on Test : 0.02106084243369735\n"
      ]
     }
    ],
@@ -1583,17 +1584,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest Avg Accuracy on test : 0.8397425897035883\n",
-      "Random Forest Exact Accuracy on test : 0.01794071762870515\n",
-      "Random Forest Precision on test : 0.20918391970728223\n",
-      "Random Forest Recall on test : 0.06017044467190534\n"
+      "Random Forest Avg Accuracy on test : 0.8397035881435257\n",
+      "Random Forest Exact Accuracy on test : 0.02106084243369735\n",
+      "Random Forest Precision on test : 0.21232926014672718\n",
+      "Random Forest Recall on test : 0.0602242071896536\n"
      ]
     }
    ],
@@ -1604,6 +1605,61 @@
     "print('Random Forest Precision on test : {}'.format(score(y_test, rf_test_pred, 'precision')))\n",
     "print('Random Forest Recall on test : {}'.format(score(y_test, rf_test_pred, 'recall')))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Accuracy on Train : 0.024785323965651834\n",
+      "Random Forest Accuracy on Test : 0.033541341653666144\n"
+     ]
+    }
+   ],
+   "source": [
+    "lr = OneVsRestClassifier(LogisticRegression())\n",
+    "lr.fit(glove_X_train, y_train)\n",
+    "\n",
+    "lr_train_pred = lr.predict(glove_X_train)\n",
+    "lr_test_pred = lr.predict(glove_X_test)\n",
+    "print('Random Forest Accuracy on Train : {}'.format(metrics.accuracy_score(y_train, lr_train_pred)))\n",
+    "print('Random Forest Accuracy on Test : {}'.format(metrics.accuracy_score(y_test, lr_test_pred)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression Avg Accuracy on test : 0.8517550702028079\n",
+      "Logistic Regression Exact Accuracy on test : 0.033541341653666144\n",
+      "Logistic Regression Precision on test : 0.13437848383500556\n",
+      "Logistic Regression Recall on test : 0.04199852722650322\n"
+     ]
+    }
+   ],
+   "source": [
+    "# evaluation\n",
+    "print('Logistic Regression Avg Accuracy on test : {}'.format(score(y_test, lr_test_pred, 'avg')))\n",
+    "print('Logistic Regression Exact Accuracy on test : {}'.format(score(y_test, lr_test_pred, 'exact')))\n",
+    "print('Logistic Regression Precision on test : {}'.format(score(y_test, lr_test_pred, 'precision')))\n",
+    "print('Logistic Regression Recall on test : {}'.format(score(y_test, lr_test_pred, 'recall')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
