add logistic regression

--- a/Modelling.ipynb
+++ b/Modelling.ipynb
@@ -1607,6 +1607,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Logistic Regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
