--- a/Bag_of_words.ipynb
+++ b/Bag_of_words.ipynb
@@ -9,6 +9,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Library Used"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 344,
    "metadata": {},
@@ -485,12 +492,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 371,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['svm_bag.pkl']"
+      ]
+     },
+     "execution_count": 371,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# save model\n",
-    "svm.save('svm_bag.pkl')"
+    "from sklearn.externals import joblib\n",
+    "joblib.dump(svm.best_estimator_, 'svm_bag.pkl')"
    ]
   },
   {
