--- a/Bag_of_words.ipynb
+++ b/Bag_of_words.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 374,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +33,8 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.multiclass import OneVsRestClassifier\n",
+    "from sklearn.externals import joblib\n",
+    "import pickle\n",
     "import string\n",
     "import ast\n",
     "import re\n",
@@ -295,6 +297,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 377,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save model\n",
+    "filename = 'nb_bag.pkl'\n",
+    "pickle.dump(nb, open(filename, 'wb'))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -390,6 +403,17 @@
     "print('Random Forest Exact Accuracy on test : {}'.format(score(y_test, rf_test_pred, 'exact')))\n",
     "print('Random Forest Precision on test : {}'.format(score(y_test, rf_test_pred, 'precision')))\n",
     "print('Random Forest Recall on test : {}'.format(score(y_test, rf_test_pred, 'recall')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 378,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save model\n",
+    "filename = 'rf_bag.pkl'\n",
+    "pickle.dump(rf, open(filename, 'wb'))"
    ]
   },
   {
@@ -492,24 +516,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 379,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['svm_bag.pkl']"
-      ]
-     },
-     "execution_count": 371,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# save model\n",
-    "from sklearn.externals import joblib\n",
-    "joblib.dump(svm.best_estimator_, 'svm_bag.pkl')"
+    "filename = 'svm_bag.pkl'\n",
+    "pickle.dump(svm, open(filename, 'wb'))"
    ]
   },
   {
@@ -578,6 +591,24 @@
     "print('Logistic Regression Precision on test : {}'.format(score(y_test, lr_test_pred, 'precision')))\n",
     "print('Logistic Regression Recall on test : {}'.format(score(y_test, lr_test_pred, 'recall')))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 380,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save model\n",
+    "filename = 'lr_bag.pkl'\n",
+    "pickle.dump(lr, open(filename, 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
